welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: not found: type Boulean
var fini:Boulean = false
         ^BDRBuggle:8: error: not found: value R
      if (litMessage==R){
                      ^BDRBuggle:12: error: not found: value L
      if (litMessage==L){
                      ^BDRBuggle:16: error: not found: value I
      if (litMessage==I){
                      ^BDRBuggle:20: error: not found: value A
      if (litMessage==A){
                      ^BDRBuggle:23: error: not found: value B
      if (litMessage==B){
                      ^BDRBuggle:27: error: not found: value C
      if (litMessage==C){
                      ^BDRBuggle:32: error: not found: value Z
      if (litMessage==Z){
                      ^BDRBuggle:35: error: not found: value Y
      if (litMessage==Y){
                      ^BDRBuggle:39: error: not found: value X
      if (litMessage==X){
                      ^